--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-source-prismic-graphql": "^3.4.0-beta.2",
     "gatsby-transformer-sharp": "^2.3.1",
+    "prismic-javascript": "^2.1.1",
+    "prismic-reactjs": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
